# my-pwp

./: .editorconfig  .gitignore  README.md
extra/: circle-rasterizer.c  circle.pbm
sim86/: Cargo.toml
sim86/src/: execute.rs  lib.rs  main.rs  model.rs  parse.rs
sim86/tests/: listing_tests.rs
sim86/tests/testdata/: listing_0039_more_movs.asm  listing_0047_challenge_flags.txt  listing_0049_conditional_jumps.txt  listing_0050_challenge_jumps.txt  test_0041_no_jumps  test_0041_no_jumps.asm  test_jmp_call_direct_absolute  test_jmp_call_direct_absolute.asm  test_jmp_call_direct_relative  test_jmp_call_direct_relative.asm  test_jumps  test_jumps.asm  test_mov_acc_mem  test_mov_acc_mem.asm  test_mov_sr  test_mov_sr.asm  test_test_instruction  test_test_instruction.asm
